# plant-intelligence-platform

./: .gitignore  app.py  convert_to_sqlite.py  data.db  final_check.py  requirements.txt  test_step1.py  test_step2.py  test_step3.py  test_step4.py  test_step4_corrections.py  test_step6_gt.py
Rules/: constants.json  (+4 more)
SharedLibraries/core/: pyproject.toml
SharedLibraries/core/engineering_core.egg-info/: SOURCES.txt
SharedLibraries/core/src/core/: __init__.py
SharedLibraries/core/src/core/engine/: __init__.py  calculation_engine.py
SharedLibraries/core/src/core/models/: __init__.py  asset.py  base.py  calculation.py  company.py  equipment.py  instrument.py  measurement.py  plant.py  subsystem.py  tag.py  unit.py
SharedLibraries/core/src/core/repositories/: __init__.py  asset_repo.py  base.py  calculation_repo.py  company_repo.py  equipment_repo.py  instrument_repo.py  measurement_repo.py  plant_repo.py  subsystem_repo.py  tag_repo.py  unit_repo.py
SharedLibraries/core/src/core/services/: __init__.py  audit_service.py  config_service.py  repository_factory.py
SharedLibraries/core/src/core/storage/: __init__.py  base.py  json_asset_repo.py  json_calculation_repo.py  json_company_repo.py  json_equipment_repo.py  json_instrument_repo.py  json_measurement_repo.py  json_plant_repo.py  json_subsystem_repo.py  json_tag_repo.py  json_unit_repo.py
SharedLibraries/core/src/engineering_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
SharedLibraries/engineeros/: pyproject.toml
SharedLibraries/engineeros/src/engineeros/: __init__.py
SharedLibraries/engineeros/src/engineeros.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
SharedLibraries/engineeros/src/engineeros/services/: __init__.py  asset_registry.py  calculation_template_service.py  rule_engine.py
(+24 files in other folders)
